git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7819 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/module/module.add.html
+++ b/App/View/module/module.add.html
@@ -13,7 +13,7 @@
 <div class="wrap">
 <input type="hidden" name="saleId" id="saleId" value="<?=$sale['id']?>">
     <div class="wrap-top">
-        <h4>首页模块设置 》 添加</h4><span></span>
+        <h4>首页模块设置 》</h4><span> 添加</span>
     </div>
 	<p class="text-left" style="margin-top:20px;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;">您可以在此管理首页推荐的商品模块，并为每个模块添加分类和商品。建议每个模块至少有两个分类。</p>
 	<div class="mj-ztBar f-clearfix">
