--- a/App/View/module/module.edit.html
+++ b/App/View/module/module.edit.html
@@ -24,7 +24,7 @@
 <div class="wrap">
 <input type="hidden" name="moduleId" id="moduleId" value="<?=$module['id']?>">
     <div class="wrap-top">
-        <h4>首页模块设置 》 编辑</h4><span></span>
+        <h4>编辑模块</h4><span></span>
     </div>
 	<div class="mj-ztBar f-clearfix">
         <span class="mj-ztBr">
