完成商标分类设置，排序，通栏删除和数量统计
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7830 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/industry/industry.induspic.html
+++ b/App/View/industry/industry.induspic.html
@@ -10,8 +10,8 @@
     <div class="mj-glC">
         <div  class="mj-inp">
             <input type="hidden" name="bzpic" class="bzpic" value="<?=$pinfo['pic']?>" />
-            <input type="text" name="industryId"  value="<?=$industryId?>" />
-            <input type="text" name="id"  value="<?=$pinfo['id']?>" />
+            <input type="hidden" name="industryId"  value="<?=$industryId?>" />
+            <input type="hidden" name="id"  value="<?=$pinfo['id']?>" />
             <div class="bzform">
             <label>广告图：</label><img src="<?=$pinfo['pic']?>" class="bzpic" style="width:80px;height:80px;">
             <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
