--- a/App/View/tmclass/tmclass.index.html
+++ b/App/View/tmclass/tmclass.index.html
@@ -4,64 +4,60 @@
 <div class="place">
     <span>位置：</span>
     <ul class="placeul">
-        <li>首页</li>
-        <li>站点管理</li>
-        <li>通栏行业菜单</li>
+        <li>分类、群组设置</li>
     </ul>
     <!-- <span style="float:right;margin-right:20px;color:red;">在售商标总数：<?=$total ?></span> -->
 </div>
 <div class="wrap">
     <div class="wrap-content">
         <p class="text-left" style="float:left;padding-top:20px;">
-            您可以在此为行业菜单设置分类、设置每个分类下的子菜单及广告等。
+            您可以在此为分类、群组设置对应的描述语言、标签以及权重排序
             <!--共有 <b class="red"><?=$allTotal?></b> 条数据，当前筛选结果 <b class="blue"><?=$total?></b> 条数据-->
         </p>
 
-        <div class="wrap-tittle">
+        <!--<div class="wrap-tittle">
             <button class="btn btn-danger" onclick="add();" type="button">创建新分类</button>
-            <!--<button class="btn btn-danger" onclick="Import();" type="button">导入商品</button>
-            <button class="btn btn-info" onclick="download();" type="button" type="button">导出表格EXCEL</button>
-            <button type="button" class="btn btn-info" onclick="setMoreDown();">批量下架</button>
-            <button type="button" class="btn btn-info" onclick="delMoreSale();">批量删除</button>
-            <button class="btn btn-info" type="button" onclick="reloadList();">刷新</button>-->
-        </div>
+        </div>-->
         <div class="wrap-table">
             <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
                 <thead>
                 <tr class="active">
                     <!--<th><input type="checkbox" id="chkAll"></th>-->
+                    <th>分类</th>
                     <th>分类名称</th>
-                    <th>子分类</th>
-                    <th>包含广告条数</th>
+                    <th>分类标题</th>
+                    <th>包含群组条数</th>
+                    <th>标签</th>
                     <th>操作/排序</th>
                 </tr>
                 </thead>
                 <tbody class="table-list">
                 <? foreach ($list as $k => $v) { ?>
                 <tr>
-                    <!--<td><input type="checkbox" name="chkId[]" class="chklist" value="<?=$v['id']?>"></td>
-                    -->
                     <td>
-                        <img src="<?=$v['icon']?>" class="bzpic" style="width:20px;height:20px;"><?=$v['title']?>
+                        <?=$v['number']?>类
                     </td>
                     <td>
-                        <?=$v['classCounts']?>
+                        <?=$v['name']?>
                     </td>
                     <td>
-                        <?=$v['picCounts']?>
+                        <?=$v['title']?>
+                    </td>
+                    <td>
+                        <?=$v['counts']?>
+                    </td>
+                    <td>
+                        <?=$v['label']?>
                     </td>
                     <td>
                         <span class="icon icon-editor">
-                            <a href="/industry/edit/?id=<?=$v['id']?>" class="btn-info">编辑</a>
-                        </span>
-                       <span class="icon icon-editor">
-                            <a href="javascript:;" class="btn-info" onclick="delAll(<?=$v['id']?>)">删除</a>
+                            <a href="/tmclass/edit/?id=<?=$v['id']?>" class="btn-info">编辑</a>
                         </span>
                         <span>
-                            <img class="img" onclick="setSort(1,<?=$v['sort']?>)" src="/Static/1.2/images/u85.gif">
+                            <img class="img" onclick="setClassSort(2,<?=$v['sort']?>,<?=$v['parent']?>)" src="/Static/1.2/images/u85.gif">
                         </span>
                         <span >
-                            <img style="transform: rotate(180deg);"  onclick="setSort(2,<?=$v['sort']?>)" src="/Static/1.2/images/u85.gif">
+                            <img style="transform: rotate(180deg);"  onclick="setClassSort(1,<?=$v['sort']?>,<?=$v['parent']?>)" src="/Static/1.2/images/u85.gif">
                         </span>
                     </td>
                 </tr>
