--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -297,8 +297,8 @@
 	</div>
 	
 	<p class="">
-		<a href="" class="nexta">确定</a>
-		<a href="" class="cancela">取消</a>
+		<a href="javascript:" class="nexta">确定</a>
+		<a href="javascript:" class="cancela">取消</a>
 	</p>
 </div>
 
@@ -335,8 +335,8 @@
             $('.chklist').prop("checked",this.checked);
         });
 
-		$(".im-title-span").on("click",function(){
-            layer.closeAll('im-wrap');
+		$(".im-title-span,.cancela").on("click",function(){
+            layer.closeAll();
         });
 		
 		//提交导出
@@ -353,6 +353,7 @@
 			$('#excelpost').submit();
 			return false;
 		})
+	
     });
 
     //批量下架
