--- a/App/View/channel/channel.banner.html
+++ b/App/View/channel/channel.banner.html
@@ -29,9 +29,10 @@
         <option value="1" <? if($info['isBanner']==1){echo 'selected';}?> >是</option>
         <option value="2" <? if($info['isBanner']==2){echo 'selected';}?> >否</option>
     </select>
-    <div style="bottom:10px;position: fixed;">
-        <a href="javascript:void(0);" class="mj-liBtns" onclick="opContact();">确定</a>
-        <a href="javascript:void(0);" class="mj-liBtns mj-abgcg" onclick="closeAll();">取消</a>
+    
+    <div style="bottom:15px;position: fixed;">
+        <button type="button" id="myButton" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;确定&nbsp;&nbsp;&nbsp;&nbsp;</button>
+        <button type="button" onclick="closeAll();" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;取消&nbsp;&nbsp;&nbsp;&nbsp;</button>
     </div>
     
 </form>
@@ -40,6 +41,36 @@
 <script type="text/javascript">
     $(function(){
         $(".mj-infoM").show();
+
+        $("#myButton").on('click', function (){
+            var _this = $(this);
+            var data = $("#setBanner").serialize();
+            _this.attr('disabled', true)
+            $.ajax({
+                type : 'post',
+                url  : '/channel/setBanner/',
+                data : data,
+                dataType : 'json',
+                success : function (data){
+                    if (data.code==1){
+                        layer.msg('操作成功！', {
+                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
+                        }, function(){
+                            parent.window.location.reload();
+                        });
+                    }else{
+                        layer.msg(data.msg, {
+                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
+                        },function(){ _this.attr('disabled', false) });
+                    }
+                },
+                error : function (data){
+                    layer.msg('操作失败，请稍后重试。', {
+                        time: 2000 //2秒关闭（如果不配置，默认是3秒）
+                    },function(){ _this.attr('disabled', false) });
+                }
+            });
+        });
 
         $(".bzform").wrap("<form id='bzformupload' action='/basic/ajaxUploadPic/' method='post' enctype='multipart/form-data'></form>");
         $("#bzfile").on('change', function(){
@@ -65,34 +96,7 @@
     {
         parent.layer.closeAll();
     }
-    function opContact()
-    {
-        var data = $("#setBanner").serialize();
-        $.ajax({
-            type : 'post',
-            url  : '/channel/setBanner/',
-            data : data,
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        parent.window.location.reload();
-                    });
-                }else{
-                    layer.msg(data.msg, {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
-    }
+
 
 </script>
 
