--- a/App/View/channel/channel.top.html
+++ b/App/View/channel/channel.top.html
@@ -20,9 +20,10 @@
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
     商标号可同时创建多个，例如：144,88888,888888
     </div>
-    <div style="bottom:10px;position: fixed;">
-        <a href="javascript:void(0);" class="mj-liBtns" onclick="opContact();">确定</a>
-        <a href="javascript:void(0);" class="mj-liBtns mj-abgcg" onclick="closeAll();">取消</a>
+    
+    <div style="bottom:15px;position: fixed;">
+        <button type="button" id="myButton" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;确定&nbsp;&nbsp;&nbsp;&nbsp;</button>
+        <button type="button" onclick="closeAll();" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;取消&nbsp;&nbsp;&nbsp;&nbsp;</button>
     </div>
         
 </form>
@@ -50,39 +51,42 @@
                 }
             });
         });
+
+        $("#myButton").on('click', function (){
+            var _this = $(this);
+            var data = $("#setTop").serialize();
+            _this.attr('disabled', true)
+            $.ajax({
+                type : 'post',
+                url  : '/channel/setTop/',
+                data : data,
+                dataType : 'json',
+                success : function (data){
+                    if (data.code==1){
+                        layer.msg('操作成功！', {
+                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
+                        }, function(){
+                            parent.window.location.reload();
+                        });
+                    }else{
+                        layer.msg(data.msg, {
+                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
+                        },function(){ _this.attr('disabled', false) });
+                    }
+                },
+                error : function (data){
+                    layer.msg('操作失败，请稍后重试。', {
+                        time: 2000 //2秒关闭（如果不配置，默认是3秒）
+                    },function(){ _this.attr('disabled', false) });
+                }
+            });
+        });
+
     });
 
     function closeAll()
     {
         parent.layer.closeAll();
-    }
-    function opContact()
-    {
-        var data = $("#setTop").serialize();
-        $.ajax({
-            type : 'post',
-            url  : '/channel/setTop/',
-            data : data,
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        parent.window.location.reload();
-                    });
-                }else{
-                    layer.msg(data.msg, {
-                        time: 3000 //2秒关闭（如果不配置，默认是3秒）
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
     }
 
 </script>
