--- a/App/View/channel/channel.index.html
+++ b/App/View/channel/channel.index.html
@@ -64,7 +64,7 @@
         </select>
         <span></span>
     </div>
-    <div>
+    <div id="is-banner" >
         <img id="bzpic" class="banner-show" src="<?=$info['banner']?>" onerror="this.src='/Static/1.2/images/ztbanner.png'" />
         <div class="alert alert-warning margin-sx-10" style="padding:2px;" role="alert">
             广告图片建议尺寸为 ( 1920 ) x ( 864 )，文件最大不超过200kb，当前支持jpg,bmp,png格式文件
@@ -85,7 +85,7 @@
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;" role="alert">
         您可以在此管理频道页的广告图，最多可创建 5 条。
     </div>
-    <div class="wrap-table">
+    <div class="wrap-table" id="is-ad" >
         <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
             <thead>
                 <tr class="active">
@@ -123,9 +123,10 @@
             <? } ?>
             </tbody>
         </table>
-    </div>
-    <div class="margin-sx-10">
-        <button class="btn btn-danger" id="add-ad" type="button">创建广告图</button>
+
+        <div class="margin-sx-10">
+            <button class="btn btn-danger" id="add-ad" type="button" <?if(count($info['items'][1])>=5){echo 'disabled="disabled"';}?> >创建广告图</button>
+        </div>
     </div>
 
     <div class="wrap-top">
@@ -138,7 +139,7 @@
         <span></span>
     </div>
     
-    <div class="wrap-table">
+    <div class="wrap-table" id="is-top" >
         <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0;width:800px;">
             <thead>
                 <tr class="active">
@@ -169,10 +170,9 @@
             <? } ?>
             </tbody>
         </table>
-    </div>
-
-    <div class="margin-sx-10">
-        <button class="btn btn-danger" id="add-top" type="button">创建置项商品</button>
+        <div class="margin-sx-10">
+            <button class="btn btn-danger" id="add-top" type="button">创建置项商品</button>
+        </div>
     </div>
     <br>
 </div>
