优化并修正bug
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7875 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/basic/basic.index.html
+++ b/App/View/basic/basic.index.html
@@ -93,7 +93,7 @@
         </table>
     </div>
     <div class="margin-sx-10">
-        <button class="btn btn-danger" id="add-banner" type="button">创建banner图</button>
+        <button class="btn btn-danger" id="add-banner" type="button" <?if(count($list[1])>=5){echo 'disabled="disabled"';}?> >创建banner图</button>
     </div>
     
     <div class="wrap-top">
@@ -143,7 +143,7 @@
     </div>
 
     <div class="margin-sx-10">
-        <button class="btn btn-danger" id="add-word" type="button">创建新搜索词</button>
+        <button class="btn btn-danger" id="add-word" type="button" <?if(count($list[2])>=10){echo 'disabled="disabled"';}?>>创建新搜索词</button>
     </div>
 
     <div class="wrap-top">
