--- a/App/View/industry/industry.edit.html
+++ b/App/View/industry/industry.edit.html
@@ -81,8 +81,8 @@
                     <td>
                         <a href="javascript:;" onclick="delItems(<?=$vl['id']?>)">删除</a>
                         <a href="javascript:;" onclick="addztype(<?=$vl['industryId']?>,<?=$vl['id']?>)">编辑</a>
-                        <img class="img" onclick="setItemsSort(1,<?=$vl['sort']?>)" src="/Static/1.2/images/u85.gif">
-                        <img style="transform: rotate(180deg);"  onclick="setItemsSort(2,<?=$vl['sort']?>)" src="/Static/1.2/images/u85.gif">
+                        <img class="img" onclick="setItemsSort(1,<?=$vl['sort']?>,<?=$vl['industryId']?>)" src="/Static/1.2/images/u85.gif">
+                        <img style="transform: rotate(180deg);"  onclick="setItemsSort(2,<?=$vl['sort']?>,<?=$vl['industryId']?>)" src="/Static/1.2/images/u85.gif">
                     </td>
                 </tr>
                 <?}?>
@@ -117,8 +117,8 @@
                     <td>
                         <a href="javascript:;" onclick="delPic(<?=$vl['id']?>)">删除</a>
                         <a href="javascript:;" onclick="addgg(<?=$vl['industryId']?>,<?=$vl['id']?>)">编辑</a>
-                        <img class="img" onclick="setPicSort(1,<?=$vl['sort']?>)" src="/Static/1.2/images/u85.gif">
-                        <img style="transform: rotate(180deg);"  onclick="setPicSort(2,<?=$vl['sort']?>)" src="/Static/1.2/images/u85.gif">
+                        <img class="img" onclick="setPicSort(1,<?=$vl['sort']?>,<?=$vl['industryId']?>)" src="/Static/1.2/images/u85.gif">
+                        <img style="transform: rotate(180deg);"  onclick="setPicSort(2,<?=$vl['sort']?>,<?=$vl['industryId']?>)" src="/Static/1.2/images/u85.gif">
                     </td>
                 </tr>
                 <?}?>
